style.css
* {
    margin: 0;
    padding: 0;
}
body {
    background-color: #f0f0f0;
    font-family: 'Nunito', sans-serif;
    color: #3C403D;
}
main {
    padding-bottom: 300px;
}
.wrapper {
    margin: 0 auto;
    width: 1000px;
}

.page-container {
    position: relative;
    min-height: 100vh;
}

/* NAVIGATION */
nav {
    width: 100%;
    height: 100px;
    background-color:#ffffff;
    box-shadow: 0 1px 1px rgba(0,0,0,0.021), 
                0 2px 2px rgba(0,0,0,0.021), 
                0 4px 4px rgba(0,0,0,0.021);
}
ul {
    margin-left: 0px;
}
ul li {
    /* Remove bullet points from list */
    list-style: none;
    /* Put list items next to each other */
    display: inline-block;
    float: none;
    line-height: 100px;
}
ul li a {
    /* Makes the link a "block" that covers the whole area */
    display: block;
    /* Remove underline of text */
    text-decoration: none;
    font-size: 20px;
    font-weight: bold;
    color:#3C403D;
    padding: 0 20px;
    font-family: 'Nunito', sans-serif;
}
nav ul li a{
    font-size: 25px;
}
/* what happens when hovering over  the ul li a*/
ul li a:hover {
    color: #48814e;
    text-decoration: none;
}
/*MAIN*/

h1,h2,h3,p{
    font-family: 'Nunito', sans-serif;
}
/*Homepage*/

#welcomemessage {
    background-color: white;
    display: block;
    margin-top: 60px;
    padding: 40px 30px 90px 30px;
    border-radius: 15px;
    transition: transform .2s;
    text-decoration: none;
    color: #3C403D;
}
#welcomemessage:hover{
    box-shadow: 0 4px 8px 0 rgba(65, 105, 77, 0.356), 0 6px 20px 0 rgba(65, 105, 77, 0.19);
    transform: scale(1.05);
}

#welcome-img{
    height: 90px;
    float: right;
    padding-bottom: 30px;
    padding-right: 20px;
}
#homepageh1 {
    font-size: 40px;
}
#homepageh2 {
    font-size: 30px;
}
#homepagep{
    display: block;
    margin-top: 80px;
    font-size: 20px;
}

/* portfolio page*/

#content{
    margin-top: 60px;
}

#content a{
    text-decoration: none;
    color:#3C403D;
    opacity: 0.2;
    transition: .2s;
}

#content h3 {
    margin-top: 30px;
    font-size: 30px;
}
.column {
    float: left;
    width: 33.33%;
    padding: 0 10px;
}
.row {
    margin: 0 - 5px;
    padding-top: 30px;
}
.row::after{
    content:"";
    display: table;
    margin-bottom: 20px;
}
.arrowpng {
    height: 50px;
    margin-left: 20px;
    opacity: 60%;
}
@media screen and (max-width: 600px){
    .column {
        width: 100%;
        display: block;
        margin-bottom: 20px;
    }
}
.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 16px;
    text-align: center;
    background-color: #f1f1f1;
    transition: transform .2s;
    height: 200px;
    border-radius: 10px;
}
.card:hover{
    box-shadow: 0 4px 8px 0 rgba(65, 105, 77, 0.356), 0 6px 20px 0 rgba(65, 105, 77, 0.19);
    transform: scale(1.05);
}

#web1{
    background-image: url("img/ToDoList2.PNG");
}
#other1{
    background-image: url("img/minicalc.png");
    background-position: center;
}
.card p {
    background-color: rgb(255, 255, 255);
    font-size: 30px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 5px;
    
}
.portfolio-text{
    float: center;
    padding-top: 30px;
    font-size: 30px;
    text-align: center;
    width: 100%;
    background-color: #cfcfcf;
    border-radius: 10px;

}
.portfolio-img {
    height: 250px;
    display: inline;
    border-radius: 7px;
    padding: 5px;
    border-radius: 30px;
    width: 33%;
    float: right;
}
/* More information on projects -pages*/

.descriptioncontent{
    background-color: rgb(255, 255, 255); ;
    border-radius: 10px;
    margin-top: 60px;
    margin-bottom: 100px;
    padding: 20px;
    padding-bottom: 30px;
}
.descriptioncontent h1{
    font-size: 40px;
    padding-bottom: 20px;
    margin-left: 40px;
}
.descriptioncontent h2{
    padding-top: 30px;
    font-size: 35px;
    margin-left: 40px;
}
.descriptioncontent p{
    font-size: 25px;
    padding-top: 10px;
    padding-bottom: 40px;
    margin-left: 40px;
    margin-right: 40px;
}
.descriptionimage{
    margin-left: auto;
    margin-right: auto;
    display: block;
    max-height: 400px;
    max-width: 100%;
    width: auto;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
/*About me page*/
#aboutmecontent{
    background-color: rgb(255, 255, 255); ;
    border-radius: 10px;
    margin-top: 60px;
    padding: 20px;
    padding-bottom: 60px;
}
#introduction {
    margin-bottom: 60px;
}
#introduction h1{
    padding: 10px;
    margin-top: 60px;
    font-size: 50px;
}
#introduction p{
    font-size: 25px;
    margin-top: 10px;
    padding: 10px;
}

#skills {
    padding-left: 20px;
}
#skills h2{
    font-size: 40px;
    margin-bottom: 20px;
}
#skills p {
    font-size: 22px;
}
#skills ul{
    margin-left: 100px;
}
#skills ul li{
    padding: 5px;
    display: inline;
    font-family: 'Nunito', sans-serif;
    font-size: 20px;
    padding: 10px 20px;
    background-color: #e9e9e9;
    border-radius: 5px;
    text-align: center;
    margin-right: 10px; 
}
#education {
    padding-left: 20px;
}
#education h2 {
    font-size: 40px;
    margin-bottom: 40px;
}
#education li{
    font-size: 22px;
}
#checkoutportfolio {
    float: right;
    font-size: 20px;
    padding-right: 20px;
    font-weight: bold;
    color: #3C403D;
}


/*FOOTER*/

.footer {
    width: 100%;
    padding: 10px 40px;
    background-color:  #A3BCB6;
    position: absolute;
    bottom: 0;
}

.footer ul {
    width: fit-content;
    float: left;
    padding-left: 20px;
}
.footer ul li {
    display: block;
    list-style: none;
    font-weight: bold;
    color: #3C403D;
}
.footer-header {
    font-size: 23px;
    padding-left: 15px;
}
.footer ul li a{
    line-height: 40px;
}

.emailimage {
    width: 360px;
    padding-left: 10px;
}

